# Quantum-Computing-Model-for-Genetic-Algorithms

./: README.md  pyproject.toml
configs/: maxcut_toy.yaml  vqe_h2_pennylane.yaml
examples/: run_maxcut_pennylane.py  run_vqe_qiskit.py
results/run_20260129_230314/: best_genome.json  config_snapshot.yaml  history.csv
results/run_20260129_230314/plots/: SUMMARY.txt
scripts/: analyze_run.py
src/qarchga/: __main__.py  cli.py  genomes.py  operators.py  rng.py  selection.py
src/qarchga.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/qarchga/backends/: __init__.py  pennylane_backend.py  qiskit_backend.py
src/qarchga/evolution/: __init__.py  engine.py  metrics.py
src/qarchga/objectives/: __init__.py  maxcut.py  vqe.py  vqe_molecule.py
src/qarchga/utils/: config.py  hashing.py  io.py
tests/: test_genome_validity.py  test_selection.py
