[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qarchga"
version = "0.1.0"
description = "Quantum Architecture Search with Genetic Algorithms (Qiskit/PennyLane backends)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pyyaml>=6.0",
  "rich>=13.0",
]

[project.optional-dependencies]
qiskit = ["qiskit>=1.0"]
pennylane = ["pennylane>=0.36"]

[project.scripts]
qarchga = "qarchga.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
